# emails-classifier

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  manage.py  pyproject.toml  requirements.txt
email_classifier/: apps.py  urls.py  views.py
email_classifier/static/email_classifier/: script.js  styles.css
email_classifier/templates/email_classifier/: index.html
smart_mail_classifier/: asgi.py  settings.py  urls.py  wsgi.py
staticfiles/email_classifier/: style.css
utils/: ai_service.py  emails.csv  train_model.py
utils/fine_tuned_model/: config.json  model.safetensors  tokenizer.json
utils/results/checkpoint-105/: config.json  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
