[project]
name = "mail-classifier"
version = "0.1.0"
description = "mail classifier projetct with AI"
authors = [
    {name = "jon1nline",email = "www.jhonattan@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "torch (>=2.8.0,<3.0.0) ; python_version < \"3.14\"",
    "transformers[torch] (>=4.56.1,<5.0.0)",
    "pymupdf (>=1.26.4,<2.0.0)",
    "datasets (>=4.0.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
